fix(coding-agent): keep null-valued unknown settings fields round-trippable
Settings.unknown() returned Map.copyOf(unknown), which rejects null
values. Any unrecognized field carrying JSON null — e.g. a key written
by a newer build that this build has no field for — made the getter
throw NPE on every load, surfacing inside SettingsManager.migrate (it
reads the unknown passthrough for queueMode/websockets).

The map exists precisely to round-trip fields this build does not know
about, so a null value is part of its contract, not a violation of it:
return an unmodifiable HashMap copy instead.

Regression: SettingsManagerTest.futureUnknownFieldWithNullValueLoadsRoundTripAsUnknown
parses a null-valued unknown key, reloads through the manager, and
asserts the field survives re-serialization.

Co-Authored-By: Claude Code <noreply@anthropic.com>